--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.lang }}">
     {%- include head.html -%}
     <body>
+        {%- include header.html -%}
         <main>
         {{ content }}
         </main>
