--- a/_sass/jr-parkour.scss
+++ b/_sass/jr-parkour.scss
@@ -56,11 +56,14 @@ section.parkour {
     }
 
     &#commencer-démarche{
-        input{
-            font-size: 1.2rem;
+        .search{
+
             margin-left: 2rem;
             margin-bottom: 3rem;
 
+            input{
+                font-size: 1.2rem;
+            }
         }
 
         output{
